refactor: Remove 'partials/' prefix from template includes in HBS files.

--- a/internal/certauth/views/admin_index.hbs
+++ b/internal/certauth/views/admin_index.hbs
@@ -1,5 +1,5 @@
-{{template "partials/preamble"}}
-{{template "partials/header" "admin"}}
+{{template "preamble"}}
+{{template "header" "admin"}}
 
 <div style="width:99%;margin:auto;padding:10px;">
 
@@ -9,4 +9,4 @@
 
 </div>
 
-{{template "partials/postamble"}}
+{{template "postamble"}}
