--- a/internal/certauth/views/admin_logs.hbs
+++ b/internal/certauth/views/admin_logs.hbs
@@ -1,6 +1,6 @@
-{{template "partials/preamble"}}
+{{template "preamble"}}
 
-{{template "partials/header" "logs"}}
+{{template "header" "logs"}}
 
 <div style="width:99%;margin:auto;padding:10px;">
 
@@ -26,4 +26,4 @@
 
 </div>
 
-{{template "partials/postamble"}}
+{{template "postamble"}}
