--- a/internal/certauth/views/admin_upstream.hbs
+++ b/internal/certauth/views/admin_upstream.hbs
@@ -1,6 +1,6 @@
-{{template "partials/preamble"}}
+{{template "preamble"}}
 
-{{template "partials/header" "upstream"}}
+{{template "header" "upstream"}}
 
 <div style="width: 99%; margin: auto; padding: 10px">
    <button id="saveButton" class="ui primary button">Save</button>
@@ -54,4 +54,4 @@
    });
 </script>
 
-{{template "partials/postamble"}}
+{{template "postamble"}}
