--- a/internal/certauth/views/wallet_login.hbs
+++ b/internal/certauth/views/wallet_login.hbs
@@ -1,6 +1,6 @@
-{{template "partials/preamble"}}
+{{template "preamble"}}
 
-{{template "partials/logobar"}}
+{{template "logobar"}}
 
 <div class="ui hidden divider"></div>
 
@@ -101,4 +101,4 @@
 
 </div>
 
-{{template "partials/postamble"}}
+{{template "postamble"}}
