--- a/internal/certauth/views/error.hbs
+++ b/internal/certauth/views/error.hbs
@@ -1,8 +1,8 @@
 {{define "error"}}
 
-{{template "partials/preamble"}}
+{{template "preamble"}}
 
-{{template "partials/logobar"}}
+{{template "logobar"}}
 
 <div class="ui hidden divider"></div>
 
@@ -14,6 +14,6 @@
 
 </div>
 
-{{template "partials/postamble"}}
+{{template "postamble"}}
 
 {{end}}
