--- a/internal/certauth/views/cert_5_contractprint.hbs
+++ b/internal/certauth/views/cert_5_contractprint.hbs
@@ -260,7 +260,7 @@
                 </div>
 
                 <p><em>(Las cláusulas generales del Contrato Marco continúan aplicando
-                        en todo lo no modificado expresamente por este Anexo III.)</em></p>
+                        en todo lo no modificado expresamente por este Anexo I.)</em></p>
 
             </div>
 
@@ -285,24 +285,6 @@
             </div>
 
             <div class="ui divider"></div>
-
-            <!-- ANEXO III -->
-            <div class="ui blue segment">
-
-                {{template "anexo_3" .}}
-
-                <div class="ui positive message">
-                    <div class="ui large checkbox">
-                        <input type="checkbox" disabled {{if .ContractCheckAnexo3}}checked{{end}}>
-                        <label>Acepto los términos y condiciones del Anexo III</label>
-                        <input type="hidden" name="contract_anexo_3" value="{{ .ContractCheckAnexo3 }}">
-                    </div>
-                </div>
-
-                <p><em>(Las cláusulas generales del Contrato Marco continúan aplicando
-                        en todo lo no modificado expresamente por este Anexo III.)</em></p>
-
-            </div>
 
         </div>
 
