--- a/internal/certauth/views/contract/2_anexo_1.hbs
+++ b/internal/certauth/views/contract/2_anexo_1.hbs
@@ -1,5 +1,5 @@
 {{define "anexo_1"}}
-<h2><strong>Anexo I – Condiciones Específicas del Nivel 1: Observador</strong></h2>
+<h2><strong>Anexo I – Condiciones Específicas del Nivel 1: Desarrollador</strong></h2>
 
 <details>
     <summary><strong>Ver Anexo I</strong></summary>
@@ -10,7 +10,7 @@
 
             <p>El presente Anexo I se aplicará únicamente si el Participante, siendo
                 ya Participante Básico, solicita y obtiene la habilitación como
-                Observador de la red ISBE. La suscripción de este anexo por las partes
+                Desarrollador en la red ISBE. La suscripción de este anexo por las partes
                 formaliza dicha habilitación, quedando integradas sus cláusulas al
                 Contrato Marco.</p>
 
