--- a/internal/certauth/views/contract/3_anexo_2.hbs
+++ b/internal/certauth/views/contract/3_anexo_2.hbs
@@ -1,7 +1,6 @@
 {{define "anexo_2"}}
 <h2 id="anexo-ii-condiciones-específicas-del-nivel-2-proveedor-de-servicios"><strong>Anexo
-        II – Condiciones Específicas del Nivel 2: Proveedor de
-        Servicios</strong></h2>
+        II – Condiciones Específicas del Nivel 2: Operador nodo de ejecución</strong></h2>
 
 <details>
     <summary>Ver Anexo II</summary>
