--- a/internal/certauth/views/cert_4_contract.hbs
+++ b/internal/certauth/views/cert_4_contract.hbs
@@ -269,7 +269,7 @@
 
                 <div class="ui positive message">
                     <div class="ui large checkbox">
-                        <input id="contract_developer" type="checkbox" name="contract_developer">
+                        <input id="contract_developer" type="radio" name="annex" value="developer">
                         <label>Acepto los términos y condiciones del Anexo I</label>
                     </div>
                 </div>
@@ -288,7 +288,7 @@
 
                 <div class="ui positive message">
                     <div class="ui large checkbox">
-                        <input id="contract_operator" type="checkbox" name="contract_operator">
+                        <input id="contract_operator" type="radio" name="annex" value="operator">
                         <label>Acepto los términos y condiciones del Anexo II</label>
                     </div>
                 </div>
@@ -348,12 +348,12 @@
             }
 
             if (!contract_developer.checked && !contract_operator.checked) {
-                alert("Debes aceptar los términos y condiciones del Anexo I o II");
+                alert("Debes aceptar uno de los términos y condiciones de los Anexos I o II");
                 return;
             }
 
-            if (!contract_operator.checked) {
-                alert("Debes aceptar los términos y condiciones del Anexo II");
+            if (contract_operator.checked && contract_developer.checked) {
+                alert("Solo puedes aceptar uno de los términos y condiciones de los Anexos I o II");
                 return;
             }
 
